syntax = "proto3";

option go_package = "qmq/qmq";
package qmq;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

message WebHeader {
    string id = 1;
    google.protobuf.Timestamp timestamp = 2;
}

message WebMessage {
    WebHeader header = 1;
    google.protobuf.Any payload = 2;
}

message DatabaseEntity {
    string id = 1;
    string type = 2;
    string name = 3;
    string parentId = 4;
    repeated string childrenIds = 5;
}

message DatabaseField {
    string id = 1;
    string name = 2;
    google.protobuf.Any value = 3;
    google.protobuf.Timestamp writeTime = 4;
    string writerId = 5;
}

message DatabaseNotificationConfig {
    string id = 1;
    string type = 2;
    string field = 3;
    repeated string contextFields = 4;
    bool notifyOnChange = 5;
}

message DatabaseNotification {
    DatabaseField current = 1;
    DatabaseField previous = 2;
    repeated DatabaseField context = 3;
}

message DatabaseEntitySchema {
    string name = 1;
    repeated string fields = 2;
}

message DatabaseFieldSchema {
    string name = 1;
    string type = 2;
}

message DatabaseRequest {
    string id = 1;
    string field = 2;
    google.protobuf.Any value = 3;
    Timestamp writeTime = 4;
    String writerId = 5;
    bool success = 6;
}

message Int {
    int64 raw = 1;
}

message String {
    string raw = 1;
}

message Timestamp {
    google.protobuf.Timestamp raw = 1;
}

message Float {
    double raw = 1;
}

message Bool {
    bool value = 1;
}

message LogMessage {
    enum LogLevelEnum {
        UNSPECIFIED = 0;
        TRACE = 1;
        DEBUG = 2;
        INFO = 3;
        WARN = 4;
        ERROR = 5;
        PANIC = 6;
    }

    string application = 1;
    LogLevelEnum level = 2;
    string message = 3;
    google.protobuf.Timestamp timestamp = 4;
}